
2016-02-17  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (set_default_line_column): fixed bug #202 where screens
	  were displayed at the cursor position when no LINE or COL was given.

2016-01-31  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* intrinsic.c (split_around_t): fixed stack overflow occuring in wrong
	  date/datetime format strings for FUNCTION TEST-FORMATTED-DATETIME
	* intrinsic.c: changed definition of string lengths for date/time
	  according to existing ones (COB_xyz_BUFF)
	* common.h [_MSC_VER]: adding alias for setenv/unsetenv fixing small memory
	  leak for calls of (putenv) - _MSC duplicates the string, POSIX does not

2016-01-30  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* general: fixing all warnings generated by msc code analysis
	  (possible memory related issues)
	* common.c (cob_rescan_env_vals): always remove invalid settings from env.
	* common.c (cob_realloc): new, combining cob_malloc, cob_free and memcpy
	* common.c (cob_get_current_date_and_time) [_MSC_VER]: use fallback
	  to GetLocalTime if calls to FileTimeToSystemTime or
	  SystemTimeToTzSpecificLocalTime return an error
	* common.c (print_version): changed generation of build stamp
	* common.c (cb_config_entry): corrected check for setting without value
	  and postponed it, doing the check for a valid setting name before
	* cobgetopt.c (cob_getopt_long_long): Fix bug #194 and warnings of msc code
	  analysis (possible memory issues) - switched from alloca to cobc's
	  internal memory handling (cobc_malloc and cobc_free)

2016-01-24  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c: fixed bug #160 - added support for variable screen origin.

2016-01-23  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (cob_screen_attr): fixed bug #192 - stopped ERASE and BLANK
	  being applied in ACCEPT statements.

2016-01-17  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (get_screen_item_line_and_col): simplified and improved to